Alterações visuais no site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
+        <link id="favicon" rel="shortcut icon" href="assets/favicon_dark.png" type="image/x-icon" />
+
         <link rel="stylesheet" href="styles.css" />
 
         <title>Tenchini | Portfólio</title>
@@ -72,7 +74,7 @@
             </div>
         </section>
 
-        <main>
+        <main class="view">
             <h2 class="texto-main">Sobre mim</h2>
 
             <section id="sobre">
@@ -166,7 +168,7 @@
                         </div>
 
                         <a href="mailto:viniciustenchi@gmail.com" class="contact-button">
-                            Enviar um e-mail <i class="fa-solid fa-arrow-right"></i>
+                            Enviar um e-mail <i id="teste" class="fa-solid fa-arrow-right"></i>
                         </a>
                     </div>
 
@@ -183,6 +185,7 @@
             <p>&copy; 2025 Vinicius Tenchini. Todos os direitos reservados.</p>
         </footer>
 
+        <a href="#" id="botao-topo" class="botao-topo" title="Voltar ao topo">&#8679;</a>
         <script src="script.js" defer></script>
     </body>
 </html>
